# roo_io

./: .bazelrc  BUILD  MODULE.bazel  README.md  library.json  library.properties
doc/: programming_guide.md
examples/SD/: SD.ino
examples/SDMMC/: SDMMC.ino
examples/Serial/: Serial.ino
src/: roo_io.h
src/roo_io/: byte_order.h  data_reader.h  data_writer.h  memory.h  status.cpp  status.h
test/: BUILD  byte_order_test.cpp  io_memory_test.cpp  memfill_test.cpp  output_iterator_p.h
test/core/: BUILD  buffered_input_stream_iterator_test.cpp  buffered_multipass_input_stream_iterator_test.cpp  buffered_output_stream_iterator_test.cpp
test/data/: BUILD  byte_order_test.cpp  input_stream_reader_test.cpp  multipass_input_stream_reader_test.cpp  output_stream_writer_test.cpp  read_test.cpp  reader_test.cpp  write_test.cpp
test/fs/: BUILD  fakefs.cpp  fakefs.h  fakefs_reference.cpp  fakefs_reference.h  fakefs_reference_test.cpp  fs_mount_p.h  fs_p.h
test/iterable/: BUILD  memory_iterable_test.cpp
test/iterator/: BUILD  buffered_input_stream_iterator_test.cpp  buffered_multipass_input_stream_iterator_test.cpp  buffered_output_stream_iterator_test.cpp  input_iterator_p.h  memory_input_iterator_test.cpp  memory_output_iterator_test.cpp  multipass_input_iterator_p.h  multipass_memory_input_iterator_test.cpp  output_iterator_p.h  unsafe_memory_input_iterator_test.cpp
test/memory/: BUILD  fill_test.cpp  load_test.cpp  memory_input_iterator_test.cpp  memory_iterable_test.cpp  memory_output_iterator_test.cpp  store_test.cpp
test/pipe/: BUILD  pipe_test.cpp  (+1 more)
(+239 files in other folders)
