module(name = "roo_io", version = "2.1.1")

bazel_dep(name = "roo_testing", version = "1.2.0")
bazel_dep(name = "googletest", version = "1.17.0")

bazel_dep(name = "roo_backport", version = "1.2.0")
bazel_dep(name = "roo_logging", version = "1.5.1")
bazel_dep(name = "roo_threads", version = "1.2.0")
